--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -290,5 +290,29 @@ body .section3 .container .grid .grid-box-5 h3 {
   font-size: 1.5em;
   line-height: 2rem;
 }
+body .section4 {
+  text-align: center;
+}
+body .section4 h2 {
+  font-size: 2em;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+body .section4 form input {
+  margin: 2rem;
+  background-color: #2e2d33;
+  border: none;
+  border-bottom: 1px solid #fbfbfb;
+  padding-bottom: 1rem;
+  font-size: 1em;
+  font-family: "PT Mono";
+}
+body .section4 form button {
+  background-color: #2e2d33;
+  border: none;
+  border-bottom: 1px solid red;
+  padding: 0.5rem;
+  color: #89888c;
+}
 
 /*# sourceMappingURL=style.css.map */
