--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -127,19 +127,19 @@ body .hero {
   width: 100%;
   height: auto;
 }
-body .hero .hero-heading .flex {
+body .hero .flex {
   border: none;
   justify-content: center;
   align-items: center;
   padding: 1rem 0;
   position: relative;
 }
-body .hero .hero-heading .flex .about-box {
+body .hero .flex .about-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-body .hero .hero-heading .flex .flex-box-1 {
+body .hero .flex .flex-box-1 {
   flex-basis: 30%;
   border: 2px solid #89888c;
   border-left: none;
@@ -147,12 +147,12 @@ body .hero .hero-heading .flex .flex-box-1 {
   height: 300px;
   justify-items: center;
 }
-body .hero .hero-heading .flex .flex-box-1 img {
+body .hero .flex .flex-box-1 img {
   display: block;
   margin: 0 auto;
   width: 55%;
 }
-body .hero .hero-heading .flex .flex-box-2 {
+body .hero .flex .flex-box-2 {
   position: relative;
   flex-basis: 50%;
   text-align: center;
@@ -160,7 +160,7 @@ body .hero .hero-heading .flex .flex-box-2 {
   height: 300px;
   padding: 4rem;
 }
-body .hero .hero-heading .flex .flex-box-2 .none-border {
+body .hero .flex .flex-box-2 .none-border {
   width: auto;
   padding: 0.2rem 0;
   border: 2px solid #89888c;
@@ -177,23 +177,23 @@ body .hero .hero-heading .flex .flex-box-2 .none-border {
   text-transform: uppercase;
   font-family: "PT Mono";
 }
-body .hero .hero-heading .flex .flex-box-3 {
+body .hero .flex .flex-box-3 {
   flex-basis: 30%;
   height: 300px;
   border: 2px solid #89888c;
   border-left: none;
   border-right: none;
 }
-body .hero .hero-heading .flex .flex-box-3 img {
+body .hero .flex .flex-box-3 img {
   display: block;
   margin: 0 auto;
   width: 55%;
 }
-body .hero .hero-heading .flex .flex-box-3 .col-1,
-body .hero .hero-heading .flex .flex-box-3 .col-2 img {
+body .hero .flex .flex-box-3 .col-1,
+body .hero .flex .flex-box-3 .col-2 img {
   padding: 2rem;
 }
-body .hero .hero-heading .flex .flex-box-3 .col-1 {
+body .hero .flex .flex-box-3 .col-1 {
   border-bottom: 2px solid #89888c;
 }
 body .section2 {
@@ -418,6 +418,385 @@ body footer .container .flex .flex-box-3 ul li {
 }
 body footer .container .flex .flex-box-3 ul li img {
   width: 20px;
+}
+@media screen and (min-width: 329px) and (max-width: 480px) {
+  body header .container {
+    padding: 1rem;
+  }
+  body header .container .grid {
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: repeat(auto);
+  }
+  body header .container .grid .grid-box:nth-child(1) {
+    display: flex;
+    grid-row: 1/3;
+    border-top: none;
+    align-items: center;
+    justify-content: center;
+    border-left: none;
+    border-bottom: none;
+  }
+  body header .container .grid .grid-box:nth-child(1) img {
+    width: 40px;
+  }
+  body header .container .grid .grid-box:nth-child(2) {
+    display: flex;
+    justify-content: flex-end;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+  }
+  body header .container .grid .grid-box:nth-child(2) h5 {
+    font-size: 0.6em;
+    color: #fbfbfb;
+  }
+  body header .container .grid .grid-box:nth-child(2) img {
+    width: 10px;
+    margin: 0 1rem;
+  }
+  body header .container .grid .grid-box:nth-child(3) {
+    border-right: none;
+    border-top: none;
+  }
+  body header .container .grid .grid-box:nth-child(3) ul {
+    display: flex;
+    justify-content: center;
+  }
+  body header .container .grid .grid-box:nth-child(3) ul li {
+    margin: 0 0.4rem;
+  }
+  body header .container .grid .grid-box:nth-child(3) img {
+    width: 10px;
+  }
+  body header .container .grid .grid-box:nth-child(4) {
+    grid-column: 2/4;
+    text-transform: uppercase;
+    font-family: "Bebas Neue";
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    border: none;
+  }
+  body header .container .grid .grid-box:nth-child(4) nav {
+    padding: 0.2rem;
+    margin-inline: auto;
+  }
+  body header .container .grid .grid-box:nth-child(4) nav .nav-items ul li {
+    display: inline;
+    margin: 0 0.2rem;
+  }
+  body header .container .grid .grid-box:nth-child(4) nav .nav-items ul li a {
+    color: #89888c;
+    font-size: 0.5em;
+  }
+  body .hero .flex {
+    flex-direction: column;
+  }
+  body .hero .flex .about-box {
+    display: flex;
+    justify-content: center;
+  }
+  body .hero .flex .flex-box-1 {
+    margin: 2rem 0;
+    width: 100%;
+    border: none;
+    border-top: 2px solid #89888c;
+    height: 300px;
+    justify-items: center;
+  }
+  body .hero .flex .flex-box-1 img {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+  }
+  body .hero .flex .flex-box-2 {
+    position: relative;
+    text-align: center;
+    height: 300px;
+    padding: 2rem 1rem;
+  }
+  body .hero .flex .flex-box-2 .none-border {
+    width: auto;
+    padding: 0.2rem 0;
+    border: 2px solid #89888c;
+    border-top: none;
+    border-bottom: none;
+    background-color: #2e2d33;
+    width: 35%;
+    margin-inline: auto;
+    position: absolute;
+    top: -2%;
+    left: 32%;
+    font-size: 1em;
+    color: #fbfbfb;
+    text-transform: uppercase;
+    font-family: "PT Mono";
+  }
+  body .hero .flex .flex-box-2 p {
+    font-size: 1em;
+  }
+  body .hero .flex .flex-box-3 {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #89888c;
+    height: 300px;
+  }
+  body .hero .flex .flex-box-3 img {
+    display: block;
+    margin: 0 auto;
+    width: 55%;
+  }
+  body .hero .flex .flex-box-3 .col-1,
+  body .hero .flex .flex-box-3 .col-2 img {
+    padding: 2rem;
+  }
+  body .hero .flex .flex-box-3 .col-1 {
+    border-bottom: 2px solid #89888c;
+  }
+  body .section2 {
+    width: 100%;
+    height: auto;
+  }
+  body .section2 h2 {
+    text-align: center;
+    font-size: 1.8em;
+    font-family: "Bebas Neue";
+    letter-spacing: 5px;
+  }
+  body .section3 {
+    width: 100%;
+    height: auto;
+  }
+  body .section3 .container .grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 2px solid #89888c;
+    border-bottom: 2px solid #89888c;
+  }
+  body .section3 .container .grid .grid-box-1 {
+    width: 100%;
+    height: 80%;
+    margin-inline: auto;
+    grid-row: 1/4;
+    text-align: center;
+    padding: 3rem 0;
+    border-bottom: 2px solid #89888c;
+  }
+  body .section3 .container .grid .grid-box-1 .product-name h4 {
+    font-size: 2em;
+    margin-bottom: 2rem;
+    color: #fbfbfb;
+    font-family: "Bebas Neue";
+    letter-spacing: 2px;
+    font-weight: 300;
+  }
+  body .section3 .container .grid .grid-box-1 .product-img img {
+    display: block;
+    margin: 0 auto;
+  }
+  body .section3 .container .grid .grid-box-1 .product-description {
+    margin-top: 2rem;
+  }
+  body .section3 .container .grid .grid-box-1 .product-description h5 {
+    font-size: 1em;
+    color: #fbfbfb;
+    font-family: "PT Mono";
+    line-height: 1.5rem;
+  }
+  body .section3 .container .grid .grid-box-1 .product-description p {
+    font-size: 1em;
+    font-family: "PT Mono";
+  }
+  body .section3 .container .grid .grid-box-1 .button {
+    margin-top: 1rem;
+  }
+  body .section3 .container .grid .grid-box-1 .button a {
+    color: #89888c;
+    border-bottom: 2px solid red;
+    padding-bottom: 0.5rem;
+  }
+  body .section3 .container .grid .grid-box-2 {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #89888c;
+    padding: 2rem 5.3rem;
+    grid-row: 1/2;
+    margin-inline: auto;
+  }
+  body .section3 .container .grid .grid-box-3 {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #89888c;
+    padding: 2rem 0;
+    grid-row: 1/3;
+  }
+  body .section3 .container .grid .grid-box-3 .img-box img {
+    display: block;
+    margin: 0 auto;
+  }
+  body .section3 .container .grid .grid-box-4 {
+    width: 100%;
+    padding: 2rem 5.1rem;
+    margin-inline: auto;
+    grid-row: 2/3;
+    border: none;
+    border-bottom: 2px solid #89888c;
+  }
+  body .section3 .container .grid .grid-box-5 {
+    width: 100%;
+    padding: 2rem;
+    grid-row: 3/4;
+    grid-column: 2/4;
+    margin-inline: auto;
+    border-bottom: 2px solid #89888c;
+    border: none;
+  }
+  body .section3 .container .grid .grid-box-5 h3 {
+    color: #fbfbfb;
+    text-transform: uppercase;
+    font-family: "Bebas Neue";
+    letter-spacing: 2px;
+    font-size: 1.5em;
+    line-height: 2rem;
+  }
+  body .section3 .container .grid .grid-box-5 p {
+    font-size: 1em;
+  }
+  body .section4 {
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+  body .section4 h2 {
+    font-size: 1.5em;
+    line-height: 2rem;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+  }
+  body .section4 form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  body .section4 form input {
+    width: 100%;
+    margin: 2rem;
+    background-color: #2e2d33;
+    border: none;
+    border-bottom: 2px solid #fbfbfb;
+    padding-bottom: 1rem;
+    font-size: 1em;
+    font-family: "PT Mono";
+  }
+  body .section4 form input:focus-visible {
+    outline: none;
+    color: #fbfbfb;
+    font-family: "PT Mono";
+  }
+  body .section4 form input[type=text]:focus-within {
+    color: #fbfbfb;
+  }
+  body .section4 form button {
+    background-color: #2e2d33;
+    border: none;
+    border-bottom: 2px solid red;
+    padding: 0.5rem;
+    color: #89888c;
+  }
+  body .section5 {
+    width: 100%;
+    height: auto;
+  }
+  body .section5 .container {
+    padding-bottom: 0;
+  }
+  body .section5 .container .flex {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-top: 2px solid #89888c;
+    border-bottom: 2px solid #89888c;
+  }
+  body .section5 .container .flex .flex-box-1 {
+    flex-basis: 30%;
+    border: none;
+    padding: 3.1rem;
+    border-bottom: 2px solid #89888c;
+  }
+  body .section5 .container .flex .flex-box-1 img {
+    display: block;
+    margin: 0 auto;
+  }
+  body .section5 .container .flex .flex-box-2 {
+    padding: 2rem 0;
+    flex-basis: 30%;
+    margin-inline: auto;
+    text-align: center;
+    border-bottom: 2px solid #89888c;
+  }
+  body .section5 .container .flex .flex-box-2 h3 {
+    color: #fbfbfb;
+    text-transform: uppercase;
+    font-family: "Bebas Neue";
+    letter-spacing: 2px;
+    font-size: 1.5em;
+    line-height: 2rem;
+  }
+  body .section5 .container .flex .flex-box-3 {
+    border: none;
+    flex-basis: 30%;
+    margin-inline: auto;
+    padding: 2.3rem;
+  }
+  body .section5 .container .flex .flex-box-3 img {
+    display: block;
+    margin: 0 auto;
+  }
+  body footer {
+    width: 100%;
+    height: auto;
+  }
+  body footer .container {
+    padding-top: 0;
+  }
+  body footer .container .flex {
+    align-items: center;
+    border-bottom: 2px solid #89888c;
+  }
+  body footer .container .flex .flex-box-1 {
+    border-right: 2px solid #89888c;
+    flex-basis: 50%;
+  }
+  body footer .container .flex .flex-box-1 h4 {
+    font-size: 1em;
+    color: #fbfbfb;
+    font-family: "Bebas Neue";
+    letter-spacing: 2px;
+    font-weight: normal;
+  }
+  body footer .container .flex .flex-box-2 {
+    padding: 1rem 0.5rem;
+    flex-basis: 30%;
+    border-right: 2px solid #89888c;
+  }
+  body footer .container .flex .flex-box-2 h5 {
+    font-family: "Bebas Neue";
+    letter-spacing: 2px;
+    color: #fbfbfb;
+    text-align: right;
+  }
+  body footer .container .flex .flex-box-3 ul {
+    margin-left: 1rem;
+  }
+  body footer .container .flex .flex-box-3 ul li {
+    display: inline;
+    margin: 0;
+  }
+  body footer .container .flex .flex-box-3 ul li img {
+    width: 10px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
